# flow

./: CMakeLists.txt
filewriter/: CMakeLists.txt  factory.cpp
include/flow/: factory.h  slot.h
manager/: CMakeLists.txt  config.json  main.cpp  slotmanager.cpp  slotmanager.h
tick/: CMakeLists.txt  factory.cpp
